<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="logo">Udacity Logo</string>
    <string name="udacity">Udacity</string>
    <string name="address">2465 Latham St\nMountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website">www.udacity.com</string>
    <string name="contact">If you have a question, we have an answer. If you need something, we\'ll help you.\nContact us anytime.</string>
</resources>
