<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.helloandroid.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity"
        android:contentDescription="@string/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/linearLayoutPadding"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/textViewBottomPadding"
            android:text="@string/udacity"
            android:textSize="@dimen/headingTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:autoLink="map"
            android:textSize="@dimen/normalTextSize"
            android:paddingBottom="@dimen/textViewBottomPadding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:autoLink="all"
            android:textSize="@dimen/normalTextSize"
            android:paddingBottom="@dimen/textViewBottomPadding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:autoLink="web"
            android:textSize="@dimen/normalTextSize"
            android:paddingBottom="@dimen/textViewBottomPadding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallTextSize"
            android:text="@string/contact"/>

    </LinearLayout>

</LinearLayout>
